# sarvam-alerting-system

./: .env.example  .gitignore  OVERVIEW.md  README.md  pyproject.toml
airflow/: README.md
airflow/images/samvaad/: Dockerfile  config.toml  pyproject.toml
airflow/samvaad/: alerting_scan_dag.py  client_report_dag.py  conversationality_review_dag.py  cycle_report_dag.py  heartbeat_dag.py  value_correctness_dag.py  weekly_evals_dag.py
config/: config.example.toml
deploy/: crontab.example  sarvam-alerting.service  sarvam-alerting.timer
docs/: cs-qc-guide.md  deep-dive.html  high-level-review.md  low-level-review.md  pm-brief.md  scope-control.md  transcript-conversationality-plan.md
scripts/: verify_campaign.py
src/sarvam_alerting/: __init__.py  cli.py  config.py  deeplinks.py  engine.py  models.py  owners.py  scope.py  state.py
src/sarvam_alerting/clients/: llm.py  metabase.py  samvaad.py  scheduling.py
src/sarvam_alerting/control/: __init__.py  slack_control.py
src/sarvam_alerting/detectors/: __init__.py  base.py  connectivity.py  conversationality.py  disposition_accuracy.py  errors.py  expected_values.py  insights_quality.py  required_populated.py  short_calls.py  stalled.py  value_sanity.py  variable_collapse.py
src/sarvam_alerting/notify/: __init__.py  base.py  console.py  gsheet.py  slack_bot.py  slack_format.py  slack_webhook.py
src/sarvam_alerting/reports/: __init__.py  client_report.py  conversationality_review.py  (+4 more)
tests/: test_control.py  test_detectors.py  test_owners.py  test_owners_cli.py  test_reliability.py  test_scope.py
