[project]
name = "sarvam-alerting"
version = "0.1.0"
description = "Automated alerting for Sarvam campaign deployments (catches default-variable regressions, connectivity/error spikes, and disposition anomalies)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "typer>=0.12",
    "rich>=13.7",
]

[project.scripts]
sarvam-alerting = "sarvam_alerting.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sarvam_alerting"]

[project.optional-dependencies]
# The Slack scope-control service (always-on Socket Mode app).
control = ["slack-bolt>=1.18"]
# The Master-QC-sheet notifier.
gsheet = ["gspread>=6.1"]
# S3-backed dedupe state / scope store (on Kubernetes).
s3 = ["boto3>=1.34"]

[dependency-groups]
dev = [
    "pytest>=8.0",
]
